specialistsCardsMobile div not showing fixed

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -252,6 +252,9 @@
         .specialistsCards{
             display: none;
         }
+        .specialistsCardsMobile{
+            display: inline-block;
+        }
     }
     .schedule{
         height: 739px;
